<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView
        android:id="@+id/nanodegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_nanodegree"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />


    <Button
        android:id="@+id/buttonSpotifyStreamer"
        android:background="#F08C35"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonSpotifyStreamerText"
        android:onClick="buttonSpotifyStreamer"
        android:layout_below="@+id/nanodegree"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />


    <Button
        android:id="@+id/buttonScoresApp"
        android:background="#F08C35"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonScoresAppText"
        android:onClick="buttonbuttonScoresApp"
        android:layout_below="@+id/buttonSpotifyStreamer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"/>


    <Button
        android:id="@+id/buttonLibraryApp"
        android:background="#F08C35"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonLibraryAppText"
        android:onClick="buttonLibraryApp"
        android:layout_below="@+id/buttonScoresApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"/>


    <Button
        android:id="@+id/buttonBuildItBigger"
        android:background="#F08C35"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonBuildItBiggerText"
        android:layout_below="@+id/buttonLibraryApp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <Button
        android:id="@+id/buttonXYZReader"
        android:background="#F08C35"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonXYZReaderText"
        android:onClick="buttonXYZReaderClick"
        android:layout_below="@+id/buttonBuildItBigger"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"/>


    <Button
        android:id="@+id/buttonCapstone"
        android:background="#FF0000"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonCapstoneText"
        android:onClick="buttonCaptsoneClick"
        android:layout_below="@+id/buttonXYZReader"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

</RelativeLayout>